--- a/test/ZiYong.ini
+++ b/test/ZiYong.ini
@@ -66,6 +66,7 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
 
+custom_proxy_group=🚀 节点选择`select`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🏡 中转节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🛩️ 高速节点`select`(?=.*(Hong Kong|国际|x8|Taiwan|Singapore))^((?!( 使用前请点击更新订阅|超实惠机场(专业稳定高速)|❤️加tg群获85折优惠码|官方tg群 t.me/cshjc|邀请用户得50%佣金|全节点断线升级中)).)*$
 custom_proxy_group=🕊️便宜节点`select`(?=.*(0.5|0.5倍|0.5x))
 custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
