--- a/test/ZiYong.ini
+++ b/test/ZiYong.ini
@@ -4,6 +4,7 @@
 
 
 ;规则集定义
+ruleset=🤖 AI,https://raw.githubusercontent.com/chuxin1212/rule/main/AI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -66,6 +67,7 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
 
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🏡 中转节点`[]🐸 手动切换
 custom_proxy_group=🚀 节点选择`select`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🏡 中转节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🛩️ 高速节点`select`(?=.*(Hong Kong|国际|x8|Taiwan|Singapore))^((?!( 使用前请点击更新订阅|超实惠机场(专业稳定高速)|❤️加tg群获85折优惠码|官方tg群 t.me/cshjc|邀请用户得50%佣金|全节点断线升级中)).)*$
 custom_proxy_group=🕊️便宜节点`select`(?=.*(0.5|0.5倍|0.5x))
