--- a/test/ziyong2.ini
+++ b/test/ziyong2.ini
@@ -56,7 +56,7 @@ custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`
 custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌐 其他地区`url-test`(🇦🇺|Australia|🇰🇵|Konghwaguk|🇩🇪|🇬🇧|UK|🇷🇺|GM)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
+custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 
 ;启用自定义规则集
 
